--- a/android/api/io/scanbot/sdk/ui/view/barcode/configuration/BarcodeScannerAdditionalConfiguration.html
+++ b/android/api/io/scanbot/sdk/ui/view/barcode/configuration/BarcodeScannerAdditionalConfiguration.html
@@ -181,8 +181,8 @@ public final class <span class="typeNameLabel"><a href=BarcodeScannerAdditionalC
                                         </tr>
                                         
                                         <tr class="rowColor">
-                                            <td class="colFirst"><code>private final <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a></code></td>
-                                            <th class="colSecond" scope="row"><code><a href=BarcodeScannerAdditionalConfiguration.html#gs1DecodingEnabled>gs1DecodingEnabled</a></code></th>
+                                            <td class="colFirst"><code>private final <a href=../../../../barcode/entity/Gs1Handling.html>Gs1Handling</a></code></td>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeScannerAdditionalConfiguration.html#gs1HandlingMode>gs1HandlingMode</a></code></th>
                                             <td class="colLast"></td>
                                         </tr>
                                         
@@ -236,7 +236,7 @@ public final class <span class="typeNameLabel"><a href=BarcodeScannerAdditionalC
                                         
                                             <tr class="altColor">
                                                 <th class="colConstructorName" scope="row"><code><span class="memberNameLink"><a
-                                                        href="#BarcodeScannerAdditionalConfiguration(java.lang.Integer,java.lang.Integer,java.lang.Integer,java.lang.Boolean,java.util.EnumSet,java.lang.Boolean,java.lang.Boolean,io.scanbot.sdk.barcode.entity.BarcodeDensity)">BarcodeScannerAdditionalConfiguration</a></span>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> minimumTextLength, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> maximumTextLength, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> minimum1DQuietZoneSize, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> gs1DecodingEnabled, <a href=https://developer.android.com/reference/kotlin/java/util/EnumSet.html>EnumSet</a>&lt;<a href=../../../../barcode/entity/MSIPlesseyChecksumAlgorithm.html>MSIPlesseyChecksumAlgorithm</a>&gt; msiPlesseyChecksumAlgorithms, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> stripCheckDigits, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> lowPowerMode, <a href=../../../../barcode/entity/BarcodeDensity.html>BarcodeDensity</a> codeDensity)</code></th>
+                                                        href="#BarcodeScannerAdditionalConfiguration(java.lang.Integer,java.lang.Integer,java.lang.Integer,io.scanbot.sdk.barcode.entity.Gs1Handling,java.util.EnumSet,java.lang.Boolean,java.lang.Boolean,io.scanbot.sdk.barcode.entity.BarcodeDensity)">BarcodeScannerAdditionalConfiguration</a></span>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> minimumTextLength, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> maximumTextLength, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> minimum1DQuietZoneSize, <a href=../../../../barcode/entity/Gs1Handling.html>Gs1Handling</a> gs1HandlingMode, <a href=https://developer.android.com/reference/kotlin/java/util/EnumSet.html>EnumSet</a>&lt;<a href=../../../../barcode/entity/MSIPlesseyChecksumAlgorithm.html>MSIPlesseyChecksumAlgorithm</a>&gt; msiPlesseyChecksumAlgorithms, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> stripCheckDigits, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> lowPowerMode, <a href=../../../../barcode/entity/BarcodeDensity.html>BarcodeDensity</a> codeDensity)</code></th>
                                                 <td class="colLast"></td>
                                             </tr>
                                         
@@ -314,11 +314,11 @@ public final class <span class="typeNameLabel"><a href=BarcodeScannerAdditionalC
                                         </tr>
                                         
                                         <tr id="i3" class="rowColor">
-                                            <td class="colFirst"><code>final <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a></code>
+                                            <td class="colFirst"><code>final <a href=../../../../barcode/entity/Gs1Handling.html>Gs1Handling</a></code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=BarcodeScannerAdditionalConfiguration.html#getGs1DecodingEnabled()>getGs1DecodingEnabled</a>() </code>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeScannerAdditionalConfiguration.html#getGs1HandlingMode()>getGs1HandlingMode</a>() </code>
                                             </th>
-                                            <td class="colLast">When set to <code>true</code>, the scanner assumes that the barcode can be a GS1 barcode.</td>
+                                            <td class="colLast">GS1 handling mode.</td>
                                         </tr>
                                         
                                         <tr id="i4" class="altColor">
@@ -384,11 +384,11 @@ public final class <span class="typeNameLabel"><a href=BarcodeScannerAdditionalC
                             </a>
                                 <h3>Constructor Detail</h3>
                                 
-                                <a name="BarcodeScannerAdditionalConfiguration(java.lang.Integer,java.lang.Integer,java.lang.Integer,java.lang.Boolean,java.util.EnumSet,java.lang.Boolean,java.lang.Boolean,io.scanbot.sdk.barcode.entity.BarcodeDensity)"></a>
+                                <a name="BarcodeScannerAdditionalConfiguration(java.lang.Integer,java.lang.Integer,java.lang.Integer,io.scanbot.sdk.barcode.entity.Gs1Handling,java.util.EnumSet,java.lang.Boolean,java.lang.Boolean,io.scanbot.sdk.barcode.entity.BarcodeDensity)"></a>
                                 <ul class="blockList">
                                     <li class="blockList">
                                         <h4>BarcodeScannerAdditionalConfiguration</h4>
-                                        <pre>BarcodeScannerAdditionalConfiguration(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> minimumTextLength, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> maximumTextLength, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> minimum1DQuietZoneSize, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> gs1DecodingEnabled, <a href=https://developer.android.com/reference/kotlin/java/util/EnumSet.html>EnumSet</a>&lt;<a href=../../../../barcode/entity/MSIPlesseyChecksumAlgorithm.html>MSIPlesseyChecksumAlgorithm</a>&gt; msiPlesseyChecksumAlgorithms, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> stripCheckDigits, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> lowPowerMode, <a href=../../../../barcode/entity/BarcodeDensity.html>BarcodeDensity</a> codeDensity)</pre>
+                                        <pre>BarcodeScannerAdditionalConfiguration(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> minimumTextLength, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> maximumTextLength, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> minimum1DQuietZoneSize, <a href=../../../../barcode/entity/Gs1Handling.html>Gs1Handling</a> gs1HandlingMode, <a href=https://developer.android.com/reference/kotlin/java/util/EnumSet.html>EnumSet</a>&lt;<a href=../../../../barcode/entity/MSIPlesseyChecksumAlgorithm.html>MSIPlesseyChecksumAlgorithm</a>&gt; msiPlesseyChecksumAlgorithms, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> stripCheckDigits, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> lowPowerMode, <a href=../../../../barcode/entity/BarcodeDensity.html>BarcodeDensity</a> codeDensity)</pre>
                                         <div class="block"></div>
                                         
                                     </li>
@@ -452,16 +452,16 @@ public final class <span class="typeNameLabel"><a href=BarcodeScannerAdditionalC
                                     </li>
                                 </ul>
                                 
-                                <a id="getGs1DecodingEnabled()">
+                                <a id="getGs1HandlingMode()">
                                     <!--   -->
                                 </a>
                                 <ul class=
                                               "blockList"
                                           >
                                     <li class="blockList">
-                                        <h4>getGs1DecodingEnabled</h4>
-                                        <pre class="methodSignature"> final <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> <a href=BarcodeScannerAdditionalConfiguration.html#getGs1DecodingEnabled()>getGs1DecodingEnabled</a>()</pre>
-                                        <div class="block"><p>When set to <code>true</code>, the scanner assumes that the barcode can be a GS1 barcode. Turn it off, if you don't want to see decoded FNC1 characters (&quot;]C1&quot; and ASCII char 29). The default is <code>true</code>. NOTE: Currently works for CODE128 barcodes only!</p></div>
+                                        <h4>getGs1HandlingMode</h4>
+                                        <pre class="methodSignature"> final <a href=../../../../barcode/entity/Gs1Handling.html>Gs1Handling</a> <a href=BarcodeScannerAdditionalConfiguration.html#getGs1HandlingMode()>getGs1HandlingMode</a>()</pre>
+                                        <div class="block"><p>GS1 handling mode. The default is <a href=../../../../barcode/entity/Gs1Handling.html#PARSE>Gs1Handling.PARSE</a>.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
