--- a/android/api/io/scanbot/sdk/ui/view/barcode/configuration/json/BarcodeJsonExtensionsKt.html
+++ b/android/api/io/scanbot/sdk/ui/view/barcode/configuration/json/BarcodeJsonExtensionsKt.html
@@ -268,19 +268,19 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                         </tr>
                                         
                                         <tr id="i4" class="altColor">
+                                            <td class="colFirst"><code>final static <a href=../../../../../barcode/entity/Gs1Handling.html>Gs1Handling</a></code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toSdk(.<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self) </code>
+                                            </th>
+                                            <td class="colLast">Converts JSON-compatible object to SDK object.</td>
+                                        </tr>
+                                        
+                                        <tr id="i5" class="rowColor">
                                             <td class="colFirst"><code>final static <a href=../BarcodeImageGenerationType.html>BarcodeImageGenerationType</a></code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toSdk(.<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self) </code>
                                             </th>
                                             <td class="colLast">Converts json compatible object to sdk object.</td>
-                                        </tr>
-                                        
-                                        <tr id="i5" class="rowColor">
-                                            <td class="colFirst"><code>final static &lt;Error class: unknown class&gt;</code>
-                                            </td>
-                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toSdk(.<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self) </code>
-                                            </th>
-                                            <td class="colLast">Converts JSON-compatible object to SDK object</td>
                                         </tr>
                                         
                                         <tr id="i6" class="altColor">
@@ -310,15 +310,15 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                         <tr id="i9" class="rowColor">
                                             <td class="colFirst"><code>final static &lt;Error class: unknown class&gt;</code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.barcode.entity.BarcodeFormat)>toJson</a>(<a href=../../../../../barcode/entity/BarcodeFormat.html>BarcodeFormat</a> $self) </code>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toSdk(.<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self) </code>
                                             </th>
-                                            <td class="colLast">Converts SDK object to JSON-compatible object.</td>
+                                            <td class="colLast">Converts JSON-compatible object to SDK object</td>
                                         </tr>
                                         
                                         <tr id="i10" class="altColor">
                                             <td class="colFirst"><code>final static &lt;Error class: unknown class&gt;</code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.barcode.entity.EngineMode)>toJson</a>(<a href=../../../../../barcode/entity/EngineMode.html>EngineMode</a> $self) </code>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.barcode.entity.BarcodeFormat)>toJson</a>(<a href=../../../../../barcode/entity/BarcodeFormat.html>BarcodeFormat</a> $self) </code>
                                             </th>
                                             <td class="colLast">Converts SDK object to JSON-compatible object.</td>
                                         </tr>
@@ -326,7 +326,7 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                         <tr id="i11" class="rowColor">
                                             <td class="colFirst"><code>final static &lt;Error class: unknown class&gt;</code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.barcode.entity.BarcodeDocumentFormat)>toJson</a>(<a href=../../../../../barcode/entity/BarcodeDocumentFormat.html>BarcodeDocumentFormat</a> $self) </code>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.barcode.entity.EngineMode)>toJson</a>(<a href=../../../../../barcode/entity/EngineMode.html>EngineMode</a> $self) </code>
                                             </th>
                                             <td class="colLast">Converts SDK object to JSON-compatible object.</td>
                                         </tr>
@@ -334,7 +334,7 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                         <tr id="i12" class="altColor">
                                             <td class="colFirst"><code>final static &lt;Error class: unknown class&gt;</code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.barcode.entity.MSIPlesseyChecksumAlgorithm)>toJson</a>(<a href=../../../../../barcode/entity/MSIPlesseyChecksumAlgorithm.html>MSIPlesseyChecksumAlgorithm</a> $self) </code>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.barcode.entity.BarcodeDocumentFormat)>toJson</a>(<a href=../../../../../barcode/entity/BarcodeDocumentFormat.html>BarcodeDocumentFormat</a> $self) </code>
                                             </th>
                                             <td class="colLast">Converts SDK object to JSON-compatible object.</td>
                                         </tr>
@@ -342,7 +342,7 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                         <tr id="i13" class="rowColor">
                                             <td class="colFirst"><code>final static &lt;Error class: unknown class&gt;</code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.ui.view.barcode.configuration.BarcodeImageGenerationType)>toJson</a>(<a href=../BarcodeImageGenerationType.html>BarcodeImageGenerationType</a> $self) </code>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.barcode.entity.MSIPlesseyChecksumAlgorithm)>toJson</a>(<a href=../../../../../barcode/entity/MSIPlesseyChecksumAlgorithm.html>MSIPlesseyChecksumAlgorithm</a> $self) </code>
                                             </th>
                                             <td class="colLast">Converts SDK object to JSON-compatible object.</td>
                                         </tr>
@@ -350,7 +350,7 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                         <tr id="i14" class="altColor">
                                             <td class="colFirst"><code>final static &lt;Error class: unknown class&gt;</code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.barcode.ui.BarcodeOverlayTextFormat)>toJson</a>(<a href=../../../../../barcode/ui/BarcodeOverlayTextFormat.html>BarcodeOverlayTextFormat</a> $self) </code>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.barcode.entity.Gs1Handling)>toJson</a>(<a href=../../../../../barcode/entity/Gs1Handling.html>Gs1Handling</a> $self) </code>
                                             </th>
                                             <td class="colLast">Converts SDK object to JSON-compatible object.</td>
                                         </tr>
@@ -358,7 +358,7 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                         <tr id="i15" class="rowColor">
                                             <td class="colFirst"><code>final static &lt;Error class: unknown class&gt;</code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.barcode.entity.BarcodeDensity)>toJson</a>(<a href=../../../../../barcode/entity/BarcodeDensity.html>BarcodeDensity</a> $self) </code>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.ui.view.barcode.configuration.BarcodeImageGenerationType)>toJson</a>(<a href=../BarcodeImageGenerationType.html>BarcodeImageGenerationType</a> $self) </code>
                                             </th>
                                             <td class="colLast">Converts SDK object to JSON-compatible object.</td>
                                         </tr>
@@ -366,12 +366,28 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                         <tr id="i16" class="altColor">
                                             <td class="colFirst"><code>final static &lt;Error class: unknown class&gt;</code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.ui.view.barcode.dialog.BarcodeConfirmationDialogConfiguration)>toJson</a>(<a href=../../dialog/BarcodeConfirmationDialogConfiguration.html>BarcodeConfirmationDialogConfiguration</a> $self) </code>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.barcode.ui.BarcodeOverlayTextFormat)>toJson</a>(<a href=../../../../../barcode/ui/BarcodeOverlayTextFormat.html>BarcodeOverlayTextFormat</a> $self) </code>
                                             </th>
                                             <td class="colLast">Converts SDK object to JSON-compatible object.</td>
                                         </tr>
                                         
                                         <tr id="i17" class="rowColor">
+                                            <td class="colFirst"><code>final static &lt;Error class: unknown class&gt;</code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.barcode.entity.BarcodeDensity)>toJson</a>(<a href=../../../../../barcode/entity/BarcodeDensity.html>BarcodeDensity</a> $self) </code>
+                                            </th>
+                                            <td class="colLast">Converts SDK object to JSON-compatible object.</td>
+                                        </tr>
+                                        
+                                        <tr id="i18" class="altColor">
+                                            <td class="colFirst"><code>final static &lt;Error class: unknown class&gt;</code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.ui.view.barcode.dialog.BarcodeConfirmationDialogConfiguration)>toJson</a>(<a href=../../dialog/BarcodeConfirmationDialogConfiguration.html>BarcodeConfirmationDialogConfiguration</a> $self) </code>
+                                            </th>
+                                            <td class="colLast">Converts SDK object to JSON-compatible object.</td>
+                                        </tr>
+                                        
+                                        <tr id="i19" class="rowColor">
                                             <td class="colFirst"><code>final static &lt;Error class: unknown class&gt;</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.ui.view.barcode.SelectionOverlayConfiguration)>toJson</a>(<a href=../../SelectionOverlayConfiguration.html>SelectionOverlayConfiguration</a> $self) </code>
@@ -477,6 +493,21 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                     <li class="blockList">
                                         <h4>toSdk</h4>
                                         <pre class="methodSignature"> final static <a href=../../../../../barcode/entity/MSIPlesseyChecksumAlgorithm.html>MSIPlesseyChecksumAlgorithm</a> <a href=BarcodeJsonExtensionsKt.html#toSdk(.<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self)</pre>
+                                        <div class="block"><p>Converts JSON-compatible object to SDK object.</p></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="toSdk(.&lt;Error class: unknown class&gt;)">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockList"
+                                          >
+                                    <li class="blockList">
+                                        <h4>toSdk</h4>
+                                        <pre class="methodSignature"> final static <a href=../../../../../barcode/entity/Gs1Handling.html>Gs1Handling</a> <a href=BarcodeJsonExtensionsKt.html#toSdk(.<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self)</pre>
                                         <div class="block"><p>Converts JSON-compatible object to SDK object.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
@@ -612,6 +643,21 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                     <li class="blockList">
                                         <h4>toJson</h4>
                                         <pre class="methodSignature"> final static &lt;Error class: unknown class&gt; <a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.barcode.entity.MSIPlesseyChecksumAlgorithm)>toJson</a>(<a href=../../../../../barcode/entity/MSIPlesseyChecksumAlgorithm.html>MSIPlesseyChecksumAlgorithm</a> $self)</pre>
+                                        <div class="block"><p>Converts SDK object to JSON-compatible object.</p></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="toJson(io.scanbot.sdk.barcode.entity.Gs1Handling)">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockList"
+                                          >
+                                    <li class="blockList">
+                                        <h4>toJson</h4>
+                                        <pre class="methodSignature"> final static &lt;Error class: unknown class&gt; <a href=BarcodeJsonExtensionsKt.html#toJson(io.scanbot.sdk.barcode.entity.Gs1Handling)>toJson</a>(<a href=../../../../../barcode/entity/Gs1Handling.html>Gs1Handling</a> $self)</pre>
                                         <div class="block"><p>Converts SDK object to JSON-compatible object.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
