--- a/android/api/io/scanbot/sdk/ui/view/check/configuration/json/JsonCheckStandard.html
+++ b/android/api/io/scanbot/sdk/ui/view/check/configuration/json/JsonCheckStandard.html
@@ -255,6 +255,18 @@ extends <a href=https://developer.android.com/reference/kotlin/java/lang/Enum.ht
                                         <td class="colLast"><p>A check format commonly used in Israel</p></td>
                                     </tr>
                                     
+                                    <tr class="altColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=JsonCheckStandard.html#UAE>UAE</a></a></span></code></th>
+                                        <td class="colLast"><p>A check format commonly used in the United Arab Emirates.</p></td>
+                                    </tr>
+                                    
+                                    <tr class="rowColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=JsonCheckStandard.html#CAN>CAN</a></a></span></code></th>
+                                        <td class="colLast"><p>A check format commonly used in Canada.</p></td>
+                                    </tr>
+                                    
                                 </table>
                             </li>
                         </ul>
